[metadata]
name = pyLabelMate
version = 0.0.1
author = Peter Hogg
author_email = peter.hogg@ubc.ca
license = GNU GPL v3.0
url = https://github.com/peter-hogg/pyLabelMate
description = Plugin to help aid with the creation and export of ground truth labels
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls =
    Bug Tracker = https://github.com/peter-hogg/pyLabelMate/issues
    Documentation = https://github.com/peter-hogg/pyLabelMate#README.md
    Source Code = https://github.com/peter-hogg/pyLabelMate
    User Support = https://github.com/peter-hogg/pyLabelMate/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    pyLabelMate = pylabelmate
